Fix image source path in index.html
Updated image source path for home section.

--- a/index.html
+++ b/index.html
@@ -39,11 +39,12 @@
             </div>
             
             <div class="home-img">
-                <img src="img/cinema.png" alt="Pipoca e claquete de cinema">
+                <img src="cinema.png" alt="Pipoca e claquete de cinema">
             </div>
         </section>
     </main>
 
     <script src="script.js"></script>
 </body>
+
 </html>
